--- a/doc/chrono_case_remote.Rmd
+++ b/doc/chrono_case_remote.Rmd
@@ -35,7 +35,7 @@ You can use the `datasets()` function to see which datasets are available *publi
 # datasets table from chronosphere
 allDat <- datasets()
 
-head(allDat[,1:3])
+allDat[,1:3]
 ```
 
 The loading functions downloaded from the 'chronosphere' servers might need some additional packages. 
@@ -123,7 +123,7 @@ We can use this list to merge the pbdb with trait data, and treat the two symbio
 # assign the symbiotic status
 corals <- merge(
   corals, # PBDB occurrences
-  unique(traits[, c("genus_detail", "genus.proper", "ECOLOGY")]),  # only the genus and ECOLOGY traits
+  unique(traits[, c("genus_detail", "genus.proper", "ECOLOGY")]),  # only necessary
   by.x="genus", by.y="genus_detail", all.x=TRUE)
 
 ```
@@ -162,13 +162,6 @@ We also omit collections for which no coordinates were available or those that c
 # separate the collection data
 collections <- corals[,c("collection_no", "lng", "lat", "stg", "paleolat" ,"paleolng")]
 collections <- unique(collections)
-
-# omit cases where something is missing
-collections <- collections[
-  !is.na(collections$stg) & 
-  !is.na(collections$lng) & 
-  !is.na(collections$lat), ]
-
 ```
 
 ## 2.4. Sea Surface Temperature (SST) data 
@@ -236,7 +229,7 @@ collections <- cbind(collections, reconstructed)
 
 ```
 
-At this stage you are welcome to compare the coordinates downloaded from the PBDB (`paleolat` and `paleolng`) and those reconstructed with GPLates (`plat` and `plng`). 
+At this stage you are welcome to compare the coordinates downloaded from the PBDB (`paleolat` and `paleolng`) and those reconstructed with GPlates (`plat` and `plng`). 
 
 After this step, we can finally extract SST values for each collection. We also omit occurrences without a corresponding SST value.
 
@@ -291,7 +284,7 @@ PlotMapWithRanges(zCorals, azCorals, i=75,zcol=pal["z"], azcol=pal["az"], alpha=
 
 Ranges of zoothanthellate and azoothanthellate corals for the `r sprintf("%s (%g - %g Ma)", stages$stage[93], round(stages$top[93], 1), round(stages$bottom[93], 1))` epoch:
 ```{r, fig.width=12, fig.asp=0.6}
-PlotMapWithRanges(zCorals, azCorals, i=93,zcol="pal["z"], azcol=pal["az"], alpha=60)
+PlotMapWithRanges(zCorals, azCorals, i=93,zcol=pal["z"], azcol=pal["az"], alpha=60)
 
 ```
 
